--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_API_URL = "http://localhost:1337"
+WORDPRESS_API_URL=https://public-api.wordpress.com/wp/v2/sites/galacticomnivorecom.wordpress.com
