--- a/package.json
+++ b/package.json
@@ -35,16 +35,17 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "date-fns": "^3.0.6",
+    "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.0.0-rc21",
     "emoji-picker-react": "^4.6.0",
-    "firebase": "^10.7.1",
+    "firebase": "^10.5.0",
+    "firebase-admin": "^11.11.0",
     "local-storage": "^2.0.0",
-    "lucide-react": "^0.284.0",
-    "mobx": "^6.12.0",
-    "mobx-react": "^9.1.0",
+    "lucide-react": "^0.288.0",
+    "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.5",
     "moment": "^2.29.4",
-    "next": "^14.0.5",
+    "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
