--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "embla-carousel-react": "^8.0.0-rc21",
     "emoji-picker-react": "^4.6.0",
     "firebase": "^10.5.0",
-    "firebase-admin": "^11.11.0",
+    "firebase-admin": "^11.11.1",
     "local-storage": "^2.0.0",
     "lucide-react": "^0.288.0",
     "mobx": "^6.10.2",
+    "mobx-react": "^9.2.0",
     "mobx-react-lite": "^4.0.5",
     "moment": "^2.29.4",
     "next": "13.5.4",
