--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "dompurify": "^3.2.4",
     "embla-carousel-react": "^8.0.0-rc21",
     "emoji-picker-react": "^4.6.0",
     "firebase": "^10.5.0",
     "firebase-admin": "^11.11.1",
+    "he": "^1.2.0",
     "local-storage": "^2.0.0",
     "lucide-react": "^0.288.0",
+    "marked": "^15.0.7",
     "mobx": "^6.10.2",
     "mobx-react": "^9.2.0",
     "mobx-react-lite": "^4.0.5",
